@@ -3803,6 +3803,32 @@ literal|1L
 operator|)
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|locatedBlocks
+operator|.
+name|isLastBlockComplete
+argument_list|()
+condition|)
+block|{
+name|realLen
+operator|=
+operator|(
+name|int
+operator|)
+name|Math
+operator|.
+name|min
+argument_list|(
+name|realLen
+argument_list|,
+name|locatedBlocks
+operator|.
+name|getFileLength
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 name|int
 name|result
 init|=
