@@ -26,9 +26,19 @@ begin_import
 import|import
 name|java
 operator|.
-name|util
+name|io
 operator|.
-name|Random
+name|ByteArrayOutputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|PrintStream
 import|;
 end_import
 
@@ -96,19 +106,7 @@ name|junit
 operator|.
 name|Assert
 operator|.
-name|assertThat
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|junit
-operator|.
-name|Assert
-operator|.
-name|assertTrue
+name|*
 import|;
 end_import
 
@@ -137,6 +135,20 @@ operator|.
 name|fs
 operator|.
 name|FSDataInputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
+name|FsShell
 import|;
 end_import
 
@@ -193,6 +205,20 @@ operator|.
 name|hdfs
 operator|.
 name|MiniDFSCluster
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|util
+operator|.
+name|ToolRunner
 import|;
 end_import
 
@@ -630,6 +656,323 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
+block|}
+comment|/**    * Adding as part of jira HDFS-5343    * Test for checking the cat command on snapshot path it    *  cannot read a file beyond snapshot file length    * @throws Exception    */
+annotation|@
+name|Test
+argument_list|(
+name|timeout
+operator|=
+literal|600000
+argument_list|)
+DECL|method|testSnapshotFileLengthWithCatCommand ()
+specifier|public
+name|void
+name|testSnapshotFileLengthWithCatCommand
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|FSDataInputStream
+name|fis
+init|=
+literal|null
+decl_stmt|;
+name|FileStatus
+name|fileStatus
+init|=
+literal|null
+decl_stmt|;
+name|int
+name|bytesRead
+decl_stmt|;
+name|byte
+index|[]
+name|buffer
+init|=
+operator|new
+name|byte
+index|[
+name|BLOCKSIZE
+operator|*
+literal|8
+index|]
+decl_stmt|;
+name|hdfs
+operator|.
+name|mkdirs
+argument_list|(
+name|sub
+argument_list|)
+expr_stmt|;
+name|Path
+name|file1
+init|=
+operator|new
+name|Path
+argument_list|(
+name|sub
+argument_list|,
+name|file1Name
+argument_list|)
+decl_stmt|;
+name|DFSTestUtil
+operator|.
+name|createFile
+argument_list|(
+name|hdfs
+argument_list|,
+name|file1
+argument_list|,
+name|BLOCKSIZE
+argument_list|,
+name|REPLICATION
+argument_list|,
+name|SEED
+argument_list|)
+expr_stmt|;
+name|hdfs
+operator|.
+name|allowSnapshot
+argument_list|(
+name|sub
+argument_list|)
+expr_stmt|;
+name|hdfs
+operator|.
+name|createSnapshot
+argument_list|(
+name|sub
+argument_list|,
+name|snapshot1
+argument_list|)
+expr_stmt|;
+name|DFSTestUtil
+operator|.
+name|appendFile
+argument_list|(
+name|hdfs
+argument_list|,
+name|file1
+argument_list|,
+name|BLOCKSIZE
+argument_list|)
+expr_stmt|;
+comment|// Make sure we can read the entire file via its non-snapshot path.
+name|fileStatus
+operator|=
+name|hdfs
+operator|.
+name|getFileStatus
+argument_list|(
+name|file1
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|fileStatus
+operator|.
+name|getLen
+argument_list|()
+argument_list|,
+name|BLOCKSIZE
+operator|*
+literal|2
+argument_list|)
+expr_stmt|;
+name|fis
+operator|=
+name|hdfs
+operator|.
+name|open
+argument_list|(
+name|file1
+argument_list|)
+expr_stmt|;
+name|bytesRead
+operator|=
+name|fis
+operator|.
+name|read
+argument_list|(
+name|buffer
+argument_list|,
+literal|0
+argument_list|,
+name|buffer
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|bytesRead
+argument_list|,
+name|BLOCKSIZE
+operator|*
+literal|2
+argument_list|)
+expr_stmt|;
+name|fis
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|Path
+name|file1snap1
+init|=
+name|SnapshotTestHelper
+operator|.
+name|getSnapshotPath
+argument_list|(
+name|sub
+argument_list|,
+name|snapshot1
+argument_list|,
+name|file1Name
+argument_list|)
+decl_stmt|;
+name|fis
+operator|=
+name|hdfs
+operator|.
+name|open
+argument_list|(
+name|file1snap1
+argument_list|)
+expr_stmt|;
+name|fileStatus
+operator|=
+name|hdfs
+operator|.
+name|getFileStatus
+argument_list|(
+name|file1snap1
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|fileStatus
+operator|.
+name|getLen
+argument_list|()
+argument_list|,
+name|BLOCKSIZE
+argument_list|)
+expr_stmt|;
+comment|// Make sure we can only read up to the snapshot length.
+name|bytesRead
+operator|=
+name|fis
+operator|.
+name|read
+argument_list|(
+name|buffer
+argument_list|,
+literal|0
+argument_list|,
+name|buffer
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|bytesRead
+argument_list|,
+name|BLOCKSIZE
+argument_list|)
+expr_stmt|;
+name|fis
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|PrintStream
+name|psBackup
+init|=
+name|System
+operator|.
+name|out
+decl_stmt|;
+name|ByteArrayOutputStream
+name|bao
+init|=
+operator|new
+name|ByteArrayOutputStream
+argument_list|()
+decl_stmt|;
+name|System
+operator|.
+name|setOut
+argument_list|(
+operator|new
+name|PrintStream
+argument_list|(
+name|bao
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|setErr
+argument_list|(
+operator|new
+name|PrintStream
+argument_list|(
+name|bao
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// Make sure we can cat the file upto to snapshot length
+name|FsShell
+name|shell
+init|=
+operator|new
+name|FsShell
+argument_list|()
+decl_stmt|;
+try|try
+block|{
+name|ToolRunner
+operator|.
+name|run
+argument_list|(
+name|conf
+argument_list|,
+name|shell
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"-cat"
+block|,
+literal|"/TestSnapshotFileLength/sub1/.snapshot/snapshot1/file1"
+block|}
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|bao
+operator|.
+name|size
+argument_list|()
+argument_list|,
+name|BLOCKSIZE
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|System
+operator|.
+name|setOut
+argument_list|(
+name|psBackup
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 end_class
